Change in main web page:
Adds header main and footer tags to the container.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
 </head>
 
 <body>
-    <div id="body-container" class="body-container"></div>
+    <div id="body-container" class="body-container">
+        <header id="body-header" class="body-header">
+        </header>
+        <main id="body-content" class="body-content">
+        </main>
+        <footer id="body-footer" class="body-footer">
+        </footer>
+    </div>
 </body>
 
 </html>
